[tool.poetry]
name = "jupyfmt"
version = "0.2.0"
description = "Format code in Jupyter notebooks"
license = "MIT"
authors = ["kpj <kim.philipp.jablonski@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kpj/jupyfmt"

[tool.poetry.dependencies]
python = "^3.8.0"
black = "^20.8b1"
nbformat = "^5.1.2"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
black = "^20.8b1"
pytest = "^6.2.1"

[tool.poetry.scripts]
jupyfmt = "jupyfmt:main"

[tool.black]
skip_string_normalization = true
