[tool.poetry]
name = "jupyfmt"
version = "0.5.3"
description = "Format code in Jupyter notebooks"
license = "MIT"
authors = ["kpj <kim.philipp.jablonski@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kpj/jupyfmt"

[tool.poetry.dependencies]
python = "^3.8.0"
black = ">=21.4,<23.0"
nbformat = "^5.1.2"
click = ">=7.1.2,<9.0.0"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
black = ">=21.4,<23.0"
pytest = "^7.0.0"

[tool.poetry.scripts]
jupyfmt = "jupyfmt:main"

[tool.black]
skip_string_normalization = true

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
